update product listing

--- a/view/component/products/product_category_title.html
+++ b/view/component/products/product_category_title.html
@@ -1,5 +1,5 @@
-				<h2 class="main-content-title">
+				<!-- <h2 class="main-content-title">
 					<a class="product-link" href="index.php?route={route}">
 						{title}
 					</a>
-				</h2>
+				</h2> -->
