--- a/view/content/products.html
+++ b/view/content/products.html
@@ -1,6 +1,6 @@
 		<main>
 			<div class="main-wrap products-wrap">
-				<div id="category-guide">
+				<!-- <div id="category-guide">
 					<a class="guide-link" href="index.php?route=products">商品一覽</a>
 					<span>/</span>
 					<a class="guide-link" href="index.php?route=soap">單品</a>
@@ -8,7 +8,275 @@
 					<a class="guide-link" href="index.php?route=soapstring">皂絲</a>
 					<span>/</span>
 					<a class="guide-link" href="index.php?route=gift_box">禮盒</a>
+				</div> -->
+				<div class="products">
+					<h2 class="main-content-title">
+						<a class="product-link" href="javascript://">
+							單品
+						</a>
+					</h2>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/yXJZnrHC" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/tt/rice.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/tt/rice.jpg" alt="田靜山巒禾風皂">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/yXJZnrHC" target="_blank">
+								田靜山巒禾風皂
+							</a>
+							<span class="product-price">
+								NT$330
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/H8WLWtXw" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/tt/lily.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/tt/lily.jpg" alt="金絲森林渲染皂">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/H8WLWtXw" target="_blank">
+								金絲森林渲染皂
+							</a>
+							<span class="product-price">
+								NT$330
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/qYHSF8CJ" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/tt/shakya.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/tt/shakya.jpg" alt="釋迦手感果力皂">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/qYHSF8CJ" target="_blank">
+								釋迦手感果力皂
+							</a>
+							<span class="product-price">
+								NT$330
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/esc88rvd" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/yl/sweet_potato01.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/yl/sweet_potato01.jpg" alt="紅瓜天然家事皂">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/esc88rvd" target="_blank">
+								紅瓜天然家事皂
+							</a>
+							<span class="product-price">
+								NT$330
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/vfdA7qr6" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/yl/kumquat01.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/yl/kumquat01.jpg" alt="金柑苦茶洗髮皂">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/vfdA7qr6" target="_blank">
+								金柑苦茶洗髮皂
+							</a>
+							<span class="product-price">
+								NT$330
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/CWAcivGH" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/yl/seaweed01.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/yl/seaweed01.jpg" alt="石花淨白洗面皂">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/CWAcivGH" target="_blank">
+								石花淨白洗面皂
+							</a>
+							<span class="product-price">
+								NT$330
+							</span>
+						</div>
+					</div>
+					<h2 class="main-content-title">
+						<a class="product-link" href="javascript://">
+							旅用皂絲
+						</a>
+					</h2>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/UTpFpUpH" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/tt/string_roselle.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/tt/string_roselle.jpg" alt="洛神紅麴旅用皂絲">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/UTpFpUpH" target="_blank">
+								洛神紅麴旅用皂絲
+							</a>
+							<span class="product-price">
+								NT$45
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/nPeaRcVG" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/tt/string_turmeric.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/tt/string_turmeric.jpg" alt="暖暖薑黃旅用皂絲">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/nPeaRcVG" target="_blank">
+								暖暖薑黃旅用皂絲
+							</a>
+							<span class="product-price">
+								NT$45
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/XHxKRx45" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/tt/string_lily.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/tt/string_lily.jpg" alt="萱草米黃旅用皂絲">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/XHxKRx45" target="_blank">
+								萱草米黃旅用皂絲
+							</a>
+							<span class="product-price">
+								NT$45
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/7rgDFd6k" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/yl/string_black_bean01.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/yl/string_black_bean01.jpg" alt="黑豆清爽旅用皂絲">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/7rgDFd6k" target="_blank">
+								黑豆清爽旅用皂絲
+							</a>
+							<span class="product-price">
+								NT$45
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/fmxEHPGJ" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/yl/string_rice_bran01.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/yl/string_rice_bran01.jpg" alt="米糠馬賽旅用皂絲">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/fmxEHPGJ" target="_blank">
+								米糠馬賽旅用皂絲
+							</a>
+							<span class="product-price">
+								NT$45
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/GKuVL8Fm" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/yl/string_honey01.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/yl/string_honey01.jpg" alt="蜂蜜甜心旅用皂絲">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/GKuVL8Fm" target="_blank">
+								蜂蜜甜心旅用皂絲
+							</a>
+							<span class="product-price">
+								NT$45
+							</span>
+						</div>
+					</div>
+					<h2 class="main-content-title">
+						<a class="product-link" href="javascript://">
+							禮盒
+						</a>
+					</h2>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/ijvm96nZ" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/string/tt/string_gift.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/string/tt/string_gift.jpg" alt="旅用皂絲禮盒組">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/ijvm96nZ" target="_blank">
+								旅用皂絲禮盒組
+							</a>
+							<span class="product-price">
+								NT$270
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/jG9AdXTx" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/tt/biggift.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/tt/biggift.jpg" alt="三三吾鄉人氣大禮盒">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/jG9AdXTx" target="_blank">
+								三三吾鄉人氣大禮盒
+							</a>
+							<span class="product-price">
+								NT$1260
+							</span>
+						</div>
+					</div>
 				</div>
-				<div class="products"></div>
 			</div>
 		</main>
