--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -1,4 +1,4 @@
-					<div class="product">
+					<!-- <div class="product">
 						<div class="product-cover">
 							<a href="index.php?route=single_product&itemno={item_no}">
 								<picture>
@@ -7,9 +7,8 @@
 								</picture>
 							</a>
 							<div class="product-add-to-cart">
-								<a href="https://www.pinkoi.com/store/trisoap" target="_blank">
-								<!-- <a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')"> -->
-									<!-- cart by praveen patchu from the Noun Project -->
+								<a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
+									// cart by praveen patchu from the Noun Project
 									<picture>
 										<source srcset="resource/img/product/add_to_cart.svg" type="image/svg+xml">
 										<img class="cart-icon" src="resource/img/product/add_to_cart.png" alt="加入購物車">
@@ -25,4 +24,4 @@
 								NT${price}
 							</span>
 						</div>
-					</div>
+					</div> -->
