--- a/view/content/products.html
+++ b/view/content/products.html
@@ -9,7 +9,8 @@
 					<span>/</span>
 					<a class="guide-link" href="index.php?route=gift_box">禮盒</a>
 				</div> -->
-				<div class="products">
+				<!-- <div class="products"></div> -->
+				<div class="product-list">
 					<h2 class="main-content-title">
 						<a class="product-link" href="javascript://">
 							單品
@@ -276,7 +277,6 @@
 								NT$1260
 							</span>
 						</div>
-					</div>
 				</div>
 			</div>
 		</main>
