add new products

--- a/view/content/products.html
+++ b/view/content/products.html
@@ -239,6 +239,65 @@
 					</div>
 					<h2 class="main-content-title">
 						<a class="product-link" href="javascript://">
+							香氛磚
+						</a>
+					</h2>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/PxpGA7A7" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/fragrance/purple.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/fragrance/purple.jpeg" alt="紫　薰衣星辰 I 三三吾鄉天然蜜蠟香氛磚">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/PxpGA7A7" target="_blank">
+								紫　薰衣星辰 I 三三吾鄉天然蜜蠟香氛磚
+							</a>
+							<span class="product-price">
+								NT$250
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/kFqQmAcv" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/fragrance/green.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/fragrance/green.jpeg" alt="綠　女神桂冠 I 三三吾鄉天然蜜蠟香氛磚">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/kFqQmAcv" target="_blank">
+								綠　女神桂冠 I 三三吾鄉天然蜜蠟香氛磚
+							</a>
+							<span class="product-price">
+								NT$250
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/pw5WF4Tc" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/fragrance/orange.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/fragrance/orange.jpeg" alt="橘　典雅維多 I 三三吾鄉天然蜜蠟香氛磚">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/pw5WF4Tc" target="_blank">
+								橘　典雅維多 I 三三吾鄉天然蜜蠟香氛磚
+							</a>
+							<span class="product-price">
+								NT$250
+							</span>
+						</div>
+					</div>
+					<h2 class="main-content-title">
+						<a class="product-link" href="javascript://">
 							禮盒
 						</a>
 					</h2>
@@ -257,6 +316,24 @@
 							</a>
 							<span class="product-price">
 								NT$270
+							</span>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-cover">
+							<a href="https://www.pinkoi.com/product/6Vxsvb6z" target="_blank">
+								<picture>
+									<source srcset="resource/img/product/soap/tt/classic.webp" type="image/webp">
+									<img class="product-cover-img" src="resource/img/product/soap/tt/classic.jpeg" alt="三三吾鄉經典款禮盒">
+								</picture>
+							</a>
+						</div>
+						<div class="product-info">
+							<a class="product-link" href="https://www.pinkoi.com/product/6Vxsvb6z" target="_blank">
+								三三吾鄉經典款禮盒
+							</a>
+							<span class="product-price">
+								NT$465
 							</span>
 						</div>
 					</div>
