--- a/view/nav.html
+++ b/view/nav.html
@@ -94,6 +94,11 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=soap">
+									手工皂介紹
+								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=customize">
 									客製化專區
 								</a>
