--- a/view/content/soapstring.html
+++ b/view/content/soapstring.html
@@ -1,5 +1,5 @@
 		<main>
-			<div class="main-wrap products-wrap">
+			<!-- <div class="main-wrap products-wrap">
 				<div id="category-guide">
 					<a class="guide-link" href="index.php?route=products">商品一覽</a>
 					<span>/</span>
@@ -24,5 +24,167 @@
 					天然環保，原料天然無毒打擊化學壓製皂。
 				</h3>
 				<div class="products"></div>
+			</div> -->
+			<div class="lp-section lp-bg-orange">
+				<div class="lp-classic-border">
+					<p class="lp-title">
+						“一場皂絲炫風已經刮起”
+					</p>
+					<p class="lp-text">
+						綿密如雪絲，故名皂絲<br>
+						兼具攜帶方便、起泡加倍、用量設計、在地公益、創新加值等多項優勢
+					</p>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-for-travel">
+				<p class="lp-title">
+					給愛旅行的你
+				</p>
+				<p class="lp-text">
+					相信你一定有過，<br>
+					滿心期待地要出去旅遊，<br>
+					但卻在打包行李的時候，<br>
+					東一罐西一罐沐浴乳洗髮精增加重量又佔空間，<br>
+					還掃了旅行的興致。<br>
+					<br>
+					不想用飯店的廉價備品，<br>
+					想要有個貼身品質好的洗沐用品有這麼難嗎？
+				</p>
+			</div>
+			<div class="lp-section lp-plain-text lp-text-list">
+				<p class="lp-title">
+					小小一包解決你多項煩惱與問題
+				</p>
+				<p class="lp-text">
+					攜帶方便，體積比手機還小。
+				</p>
+				<p class="lp-text">
+					簡易輕便，重量比一支鑰匙還輕。
+				</p>
+				<p class="lp-text">
+					綜合清潔，天然配方All in one 設計，一包洗全身。
+				</p>
+				<p class="lp-text">
+					天然純淨，使用純天然級植物油打製，洗完滋潤不乾澀。
+				</p>
+				<p class="lp-text">
+					起泡加倍，不添加化學起泡劑，特殊皂網袋設計，一洗就知道的綿密。
+				</p>
+			</div>
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-foam-fest">
+				<div class="lp-text-cover-dark lp-content-left">
+					<p class="lp-title">
+						泡沫饗宴
+					</p>
+					<p class="lp-subtitle lp-text-sep">
+						別小看皂絲包的起泡能力
+					</p>
+					<p class="lp-text">
+						很多人第一次使用皂絲包<br>
+						都被強力的起泡給嚇呆了<br>
+						但這絕對不是添加了化學起泡劑<br>
+						透過三三數十種配方設計經驗<br>
+						以及特殊皂網袋設計<br>
+						一搓就有感覺的泡沫饗宴。
+					</p>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-natural-oil">
+				<div class="lp-text-cover-dark lp-content-right">
+					<p class="lp-title lp-text-sep">
+						天然植物油多種配方
+					</p>
+					<p class="lp-text">
+						採用誠香集認證天然植物油<br>
+						精心調配多種配方<br>
+						乾性、中性、油性、敏感型肌膚<br>
+						對應多項肌膚設計不同配方皂絲款式<br>
+						貼心為你量身而製
+					</p>
+				</div>
+			</div>
+			<div class="lp-section lp-plain-text">
+				<p class="lp-title">
+					用過皂絲包的人都這樣說
+				</p>
+				<div class="lp-customer-feedbacks">
+					<div class="lp-cf">
+						<div class="lp-cf-head">
+							<p class="lp-cf-title">
+								吳小姐
+							</p>
+						</div>
+						<div class="lp-cf-content lp-bg-orange">
+							<p class="lp-cf-text">
+								旅用皂絲包是很棒的構想，可以當皂網直接搓揉起泡，而且這樣的設計也省去額外的包裝，是兼具環保的巧思。
+							</p>
+						</div>
+					</div>
+					<div class="lp-cf">
+						<div class="lp-cf-head">
+							<p class="lp-cf-title">
+								Wanda
+							</p>
+						</div>
+						<div class="lp-cf-content lp-bg-orange">
+							<p class="lp-cf-text">
+								稍微搓揉一下就起了很多泡泡。我覺得是一款很天然且用量又很省的手工皂！我滿喜歡的！謝謝身障學員們，克服了先天的障礙，也謝謝三三創造了這麼棒的商品！
+							</p>
+						</div>
+					</div>
+					<div class="lp-cf">
+						<div class="lp-cf-head">
+							<p class="lp-cf-title">
+								張小姐
+							</p>
+						</div>
+						<div class="lp-cf-content lp-bg-orange">
+							<p class="lp-cf-text">
+								一開始是朋友介紹給我的，覺得皂絲這個產品感覺很特別。剛好一次旅行就拿來用用看，我印象最深刻的就是一搓下去就起了很多泡泡，因為我的小孩很喜歡玩泡泡，所以對產品加分很多。
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-easy-to-carry">
+				<p class="lp-title">
+					攜帶方便
+				</p>
+				<p class="lp-text">
+					比手機還小，比鑰匙還輕。<br>
+					三三瞭解客戶方便輕巧的需求，<br>
+					經過數百份問卷測試，<br>
+					兩天一夜只要一包就能搞定你需要的清潔
+				</p>
+			</div>
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-essential-oil">
+				<p class="lp-title">
+					獨門植物複方精油添加
+				</p>
+				<p class="lp-text">
+					每款皂絲包有三三長時間調配的協調複方精油，<br>
+					採用天然植物複方精油，<br>
+					並透過與皂絲包融入的特殊入皂精油添加手法，<br>
+					讓你一打開便能感受到獨特三三香氛，<br>
+					更在使用完產品後達到放鬆效果。
+				</p>
+			</div>
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-welfare-produce-together">
+				<p class="lp-title">
+					社福協力生產
+				</p>
+				<p class="lp-subtitle lp-bg-orange">
+					“從生產到包裝，我們看見身障朋友活躍的表現！”
+				</p>
+				<p class="lp-text">
+					旅用皂絲的生產製程非常繁雜，<br>
+					從配方設計研發完成後，<br>
+					三三將技術移轉給身障社福協力生產，<br>
+					從培訓到上場時做至今，<br>
+					做皂到包裝，<br>
+					身障學員都能夠一手包辦，<br>
+					每每拿到精美產品的消費者總會讚嘆，<br>
+					誰說身障朋友沒辦法做出精緻產品？
+				</p>
 			</div>
 		</main>
