--- a/view/nav.html
+++ b/view/nav.html
@@ -99,6 +99,11 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=soapstring">
+									旅用皂絲介紹
+								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=customize">
 									客製化專區
 								</a>
