--- a/view/nav.html
+++ b/view/nav.html
@@ -104,6 +104,11 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=fragrance">
+									香氛磚介紹
+								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=customize">
 									客製化專區
 								</a>
