test pinkoi id display

--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -1,4 +1,4 @@
-					<!-- <div class="product">
+					<div class="product">
 						<div class="product-cover">
 							<a href="index.php?route=single_product&itemno={item_no}">
 								<picture>
@@ -18,10 +18,10 @@
 						</div>
 						<div class="product-info">
 							<a class="product-link" href="index.php?route=single_product&itemno={item_no}">
-								{name}
+								{name}, {pinkoi_page_id}
 							</a>
 							<span class="product-price">
 								NT${price}
 							</span>
 						</div>
-					</div> -->
+					</div>
