--- a/view/content/products.html
+++ b/view/content/products.html
@@ -9,7 +9,7 @@
 					<span>/</span>
 					<a class="guide-link" href="index.php?route=gift_box">禮盒</a>
 				</div> -->
-				<!-- <div class="products"></div> -->
+				<div class="products"></div>
 				<div class="product-list">
 					<h2 class="main-content-title">
 						<a class="product-link" href="javascript://">
